fix(view Home): fix layout bug due to overflow property

--- a/src/styles/views/home.scss
+++ b/src/styles/views/home.scss
@@ -36,27 +36,30 @@
   }
 }
 
-.contacts.search-result.on {
-  position: absolute;
-  width: 100%;
+.contacts.search-result {
+  overflow-y: initial;
 
-  background-color: #fff;
-
-  top: 0;
-  right: 0;
-
-  &:empty::after {
-    content: 'Resultados';
-
+  &.on {
     position: absolute;
-
-    color: var(--tertiary-clr);
-    font-size: var(--fs-16);
-    opacity: 0.7;
-
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+  
+    background-color: #fff;
+  
+    &:empty::after {
+      content: 'Resultados';
+  
+      position: absolute;
+  
+      color: var(--tertiary-clr);
+      font-size: var(--fs-16);
+      opacity: 0.7;
+  
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
 
